--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 	<h1> Prima pagina creata su un repo git</h1>
 	<p> primo paragrafo di prova</p>
-	<p> ciao </p>
+	<p> ciao come va?</p>
 </body>
 </html>	
